Add docker compose configurations for running the (micro)services